<resources>
    <string name="app_name">Pomodoro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="all_tasks">All Tasks</string>
    <string name="completed">Completed</string>
    <string name="add_new_task">Add new task</string>
    <string name="skin">Skin</string>
    <string name="new_task">New Task</string>
    <string name="task_name">Task name</string>
    <string name="short_description">Short description</string>
    <string name="task_priority">Task Priority</string>
    <string name="hight">Hight</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="pomodoro_config">Pomodoro Config</string>
    <string name="work_interval">Work Gap (min)</string>
    <string name="tasks">Tasks</string>
    <string name="short_break">Break (min)</string>
    <string name="keep_in_mind_numbers_above_represent_minutes">Keep in mind: Numbers above represent minutes</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="stats">Stats</string>
    <string name="profile">Profile</string>
    <string name="dash">-</string>
    <string name="productivity">Productivity</string>
    <string name="summary_by_task">Summary by task</string>
    <string name="view_more">View more</string>
    <string name="pomodoro_techinque">Pomodoro techinque allows you yo work\nfor a long time without feeling tired</string>
    <string name="juan_perez_eliminar">Juan Perez</string>
    <string name="emial_eliminar">juanperez@gmail.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="new_to_logistics">New to Logistics?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User name</string>
    <string name="continue_text">Continue</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="by_signing_up_you_re_agree_to_our">By signing up, you\'re agree to our</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="forgot_n_password">Forgot\nPassword?</string>
    <string name="don_t_worry_it_happens_please_enter_the_address_associated_with_your_account">Don\'t worry! It happens. Please enter the address associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="configuration">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
</resources>